Bug 33843 - [4.2 regression] Broken diagnostic: 'bit_not_expr' not supported by pp_cxx_unqualified_id
Summary: [4.2 regression] Broken diagnostic: 'bit_not_expr' not supported by pp_cxx_un...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Not yet assigned to anyone
URL:
Keywords: diagnostic, monitored
Depends on:
Blocks:
 
Reported: 2007-10-20 22:09 UTC by Volker Reichelt
Modified: 2009-03-31 00:34 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.3.0
Known to fail: 4.2.5
Last reconfirmed: 2007-10-25 11:06:27


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Reichelt 2007-10-20 22:09:00 UTC
The C++ generates a broken diagnostic for the following invalid code
snippet since GCC 3.4.2:

=====================================
struct A {};

void foo(A* p())
{
  p->A::~A();
}
=====================================

bug.cc: In function 'void foo(A* (*)())':
bug.cc:5: error: request for member 'A::#'bit_not_expr' not supported by pp_cxx_unqualified_id#' in '* p', which is of non-class type 'A* ()()'
Comment 1 paolo@gcc.gnu.org 2007-10-25 23:43:05 UTC
Subject: Bug 33843

Author: paolo
Date: Thu Oct 25 23:42:49 2007
New Revision: 129637

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=129637
Log:
2007-10-25  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33843
	* cxx-pretty-print.c (pp_cxx_unqualified_id): Deal with BIT_NOT_EXPR.

2007-10-25  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33843
	* g++.dg/template/error32.C: New.

Added:
    trunk/gcc/testsuite/g++.dg/template/error32.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/cxx-pretty-print.c
    trunk/gcc/testsuite/ChangeLog

Comment 2 Paolo Carlini 2007-10-25 23:46:33 UTC
Fixed in mainline.
Comment 3 Joseph S. Myers 2008-07-04 22:19:57 UTC
Closing 4.1 branch.
Comment 4 Joseph S. Myers 2009-03-31 00:34:30 UTC
Closing 4.2 branch, fixed in 4.3.