2007-10-25  Paolo Carlini  <pcarlini@suse.de>

PR c++/33843
	* cxx-pretty-print.c (pp_cxx_unqualified_id): Deal with BIT_NOT_EXPR.

2007-10-25  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33843
	* g++.dg/template/error32.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129637 138bc75d-0d04-0410-961f-82ee72b054a4